# python-cicd-app

./: .coveragerc  .gitignore  Dockerfile  Jenkinsfile  README.md  pyproject.toml  requirements-dev.txt  sonar-project.properties
perf/: k6-script.js
src/app/: core.py  main.py  models.py  routes.py
tests/functional/: test_api.py
tests/unit/: test_core.py  test_models.py
